--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,6 +21,23 @@ h2 {
   display: flex;
   flex-direction: column;
 }
+  nav {
+    display: flex;
+    justify-content: center;
+  }
+   nav button {
+    flex: 1;
+    border: none;
+    border-bottom: solid black;
+    border-radius: 5px 5px 0 0;
+    background-color: transparent;
+   }
+   nav button.selected {
+    border: solid black;
+    border-bottom: none;
+   }
+
+
   .todayWeather {
     display: grid;
     padding: 5%;
