Move tabs back again, and add div... for future weather day average

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -54,7 +54,7 @@ h2 {
     display: flex;
     flex-direction: column;
   }
-    .futureWeatherContent {
+    .futureWeatherHourContent {
       display: flex;
       overflow: scroll;
     }
