--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5 {
 
 body, html {
   margin: 0;
-  height: 100%;
+  min-height: 100%;
   background: radial-gradient(circle at 10% 20%, rgb(253, 239, 132) 0%, rgb(247, 198, 169) 54.2%, rgb(21, 186, 196) 100.3%);
 }
 h2 {
@@ -53,8 +53,23 @@ h2 {
   .futureWeather {
     display: flex;
     flex-direction: column;
+    gap: 5px;
   }
+    .futureWeatherDayContent {
+      display: grid;
+      padding: 0 5% 0 5%;
+      grid-template-rows: repeat(3, 1fr);
+      grid-template-columns: repeat(4, 1fr);
+    }
+      .dayCondition {
+        grid-column: 1 / 5;
+      }
     .futureWeatherHourContent {
       display: flex;
+      gap: 5px;
       overflow: scroll;
     }
+      .hourContainer {
+        border: solid rgba(177, 177, 177, 0.562);
+        border-radius: 5px;
+      }
