--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,21 +6,33 @@
 h1, h2, h3, h4, h5 {
   margin: 0;
 }
-
+.hidden {
+  display: none;
+}
 body, html {
   margin: 0;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 100vw;;
   background: radial-gradient(circle at 10% 20%, rgb(253, 239, 132) 0%, rgb(247, 198, 169) 54.2%, rgb(21, 186, 196) 100.3%);
 }
 h2 {
   font-size: 5rem;
 }
 
-.mainContainer {
+main {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  min-height: 100vh;
+}
+/* .mainContainer {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-}
+} */
   nav {
     display: flex;
     justify-content: center;
@@ -28,23 +40,48 @@ h2 {
    nav button {
     flex: 1;
     border: none;
-    border-bottom: solid black;
+    /* border-bottom: solid black; */
     border-radius: 5px 5px 0 0;
     background-color: transparent;
    }
    nav button.selected {
-    border: solid black;
+    /* border: solid black; */
     border-bottom: none;
+    background-color: rgba(177, 177, 177, 0.3);
+
    }
 
 
   .todayWeather {
     display: grid;
+    position: relative;
     padding: 5%;
     grid-template-rows: 0.5fr 0.5fr repeat(2, 1fr);
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 2fr 0.5fr;
     align-items: center;
   }
+    .locationChange {
+      display: flex;
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      margin: 0;
+      width: fit-content;
+      height: fit-content;
+    }
+    .locationInput {
+      grid-row: 1;
+      grid-column: 1 / span 2;
+    }
+      .locationInput input {
+        width: 85%;
+      }
+      .locationInput button {
+        padding: 0;
+        margin: 0;
+        width: 10%;
+        height: fit-content;
+      }
     .location {
       grid-row: 1;
       grid-column: 1 / span 2;
@@ -68,6 +105,9 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    /* border: solid black; */
+    /* border-top: 0; */
+    background-color: rgba(177, 177, 177, 0.3);
   }
     .futureWeatherDayContent {
       display: grid;
